--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,15 @@
 [submodule "modules/stdlib"]
 	path = modules/stdlib
 	url = https://github.com/puppetlabs/puppetlabs-stdlib.git
+[submodule "modules/redis"]
+	path = modules/redis
+	url = https://github.com/thomasvandoren/puppet-redis.git
+[submodule "wget"]
+	path = wget
+	url = https://github.com/maestrodev/puppet-wget
+[submodule "modules/wget"]
+	path = modules/wget
+	url = https://github.com/maestrodev/puppet-wget
+[submodule "modules/gcc"]
+	path = modules/gcc
+	url = https://github.com/puppetlabs/puppetlabs-gcc.git
