--- a/.gitmodules
+++ b/.gitmodules
@@ -34,6 +34,6 @@
 [submodule "modules/nginx"]
 	path = modules/nginx
 	url = https://github.com/jfryman/puppet-nginx
-[submodule "modules/php"]
-	path = modules/php
-	url = https://github.com/example42/puppet-php.git
+[submodule "modules/puppi"]
+	path = modules/puppi
+	url = https://github.com/example42/puppi.git
